[package]
name = "gst-ki-plugins-rs"
version = "0.1.0"
authors = ["Vladislav Bortnikov <bortnikov.vladislav@e-sakha.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glib = { git = "https://github.com/gtk-rs/gtk-rs" }
opencv = {version = "0.49", features = ["contrib"]}
atomic_refcell = "0.1"
once_cell = "1.0"

[dependencies.gst]
package = "gstreamer"
git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
features = ["v1_18"]

[dependencies.gst-base]
package = "gstreamer-base"
git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
features = ["v1_18"]

[dependencies.gst-video]
git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
features = ["v1_18"]
package="gstreamer-video"

[lib]
name = "gstkiplugins"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dev-dependencies]
gst-check = { package = "gstreamer-check", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
gst-app = { package = "gstreamer-app", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }

[package.metadata.capi]
min_version = "0.7.0"

[package.metadata.capi.header]
enabled = false

[package.metadata.capi.library]
install_subdir = "gstreamer-1.0"
versioning = false

[package.metadata.capi.pkg_config]
requires_private = "gstreamer-1.0, gstreamer-base-1.0, gstreamer-audio-1.0, gobject-2.0, glib-2.0, gmodule-2.0"
